--- a/html/controlpanels.html
+++ b/html/controlpanels.html
@@ -50,33 +50,33 @@
     </div>
     <div class="panels">
 
-      <a href="controlpanel.html" class="panel">
+      <a href="controlpanel.html" class="panel-tile">
         <h5>Sample Control Panel</h5>
         <p id="green">3/12/2016</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Garage</h5>
         <p id="green">4/05/2016</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Countryhouse</h5>
         <p id="yellow">1/23/2015</p>
         <p class="status" id="yellow">timeout</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Brewery</h5>
         <p id="red">2/14/2016</p>
         <p class="status" id="red">not responding</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Treehouse</h5>
         <p id="green">2/15/2016</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Dogsuit</h5>
         <p id="green">4/16/2016</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Catsuit</h5>
         <p id="green">5/14/2016</p>
       </a>
