--- a/html/devices.html
+++ b/html/devices.html
@@ -49,33 +49,33 @@
       </div>
     </div>
     <div class="panels">
-      <a href="device.html" class="panel">
+      <a href="device.html" class="panel-tile">
         <h5>Sample Device</h5>
         <p id="green">4/5/2016</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Garage Unit</h5>
         <p id="green">4/05/2016</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Home Unit</h5>
         <p id="green">2/5/2016</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Brewery</h5>
         <p id="green">2/3/2016</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Test unit</h5>
         <p id="red">1/14/2016</p>
         <p class="status" id="red">not responding</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Meteorological Station</h5>
         <p id="yellow">7/11/2016</p>
         <p class="status" id="yellow">timeout</p>
       </a>
-      <a href="#" class="panel">
+      <a href="#" class="panel-tile">
         <h5>Security Unit</h5>
         <p id="red">3/18/2016</p>
         <p class="status" id="red">not responding</p>
