--- a/html/device-mine.html
+++ b/html/device-mine.html
@@ -32,13 +32,12 @@
     </div>
   </div>
   <div class="content">
-    <h1>Sample Device</h1>
     <div class="bar">
       <a href="devices.html">
       <button type="button" class="btn btn-primary">Back</button>
     </a>
       <div class="title">
-    <h1 class="no-show">Sample Device</h1>
+    <h1>Sample Device</h1>
   </div>
     <div class="control-buttons">
       <a href="new-widget.html">
@@ -49,13 +48,10 @@
     </a>
     </div>
   </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      Settings
-    </div>
-    <div class="panel-body">
-      <div class="widget-setting-group">
+  <div class="settings-block">
+  <div class="widget-setting-group">
   <div class="widget-setting-category">
+    <p>Settings</p>
   </div>
   <div class="widget-setting-label">
     <p>Name</p>
@@ -65,9 +61,9 @@
   </div>
 </div>
 <div class="widget-setting-group">
-  <div class="widget-setting-category">
-  </div>
-  <div class="widget-setting-label">
+<div class="widget-setting-category">
+</div>
+<div class="widget-setting-label">
   <p> Status</p>
 </div>
 <div class="widget-setting">
@@ -83,120 +79,111 @@
 </div>
 <div class="widget-setting">
 <p id="below"> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
-<button class="btn btn-default btn-sm" id="token"> Get Another</button>
+<button class="btn btn-primary" id="token"> Get Another</button>
 </div>
 </div>
 </div>
+<div class="settings-block">
+<div class="widget-setting-group" id="variables">
+  <div class="widget-setting-category">
+    <p>Variables</p>
+  </div>
+<div class="widget-setting-label">
+      <p>Songs</p>
 </div>
-<div class="panel panel-default">
-  <div class="panel-heading">Variables</div>
-  <div class="panel-body">
-    <div class="widget-setting-group" >
-      <div class="widget-setting-category">
-      </div>
-    <div class="widget-setting-label">
-          <p class="editable">Songs</p>
-    </div>
-    <div class="widget-setting">
-        <div class="data-unit">
-            <p>20</p>
-          <h6>5:30am 6/30</h6>
-        </div>
-    </div>
-    </div>
-    <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
-      <div class="widget-setting-label">
-        <p class="editable">Temp</p>
-      </div>
-      <div class="widget-setting">
-        <div class="data-unit">
-            <p>22</p>
-          <h6>10:13am 7/11</h6>
-        </div>
-    </div>
-    </div>
-    <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
-      <div class="widget-setting-label">
-        <p class="editable">Distance</p>
-      </div>
-      <div class="widget-setting">
-        <div class="data-unit">
-            <p>36</p>
-          <h6>9:02am 7/10</h6>
-        </div>
-    </div>
-    </div>
-    <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
-      <div class="widget-setting-label">
-        <p class="editable">Wind Speed</p>
-      </div>
-      <div class="widget-setting">
-        <div class="data-unit">
-            <p>2</p>
-          <h6>1:33am 7/11</h6>
-        </div>
-    </div>
+<div class="widget-setting">
+    <div class="data-unit">
+        <p>20</p>
+      <h6>5:30am 6/30</h6>
     </div>
 </div>
 </div>
-<div class="panel panel-default">
-  <div class="panel-heading">Diagnostic Information</div>
-  <div class="panel-body">
-    <div class="widget-setting-group">
+  <div class="widget-setting-group">
     <div class="widget-setting-category">
     </div>
     <div class="widget-setting-label">
-      <p>CPU</p>
+      <p>Temp</p>
     </div>
     <div class="widget-setting">
       <div class="data-unit">
-        <p>24%</p>
-        <h6>10:33am 7/11</h6>
+          <p>22</p>
+        <h6>10:13am 7/11</h6>
       </div>
-    </div>
-    </div>
-    <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
-      <div class="widget-setting-label">
-        <p>IP</p>
-      </div>
-      <div class="widget-setting">
-        <div class="data-unit">
-          <p>192.168.11.3</p>
-          <h6>1:33am 7/11</h6>
-        </div>
-    </div>
-    </div>
-    <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
-      <div class="widget-setting-label">
-        <p>Hostname</p>
-      </div>
-      <div class="widget-setting">
-        <div class="data-unit">
-          <p>raspberrypi</p>
-          <h6>1:33am 7/11</h6>
-        </div>
-    </div>
-    </div>
-</div>
-</div>
-<div class="panel panel-danger">
-  <div class="panel-heading">
-    Delete device
   </div>
-  <div class="panel-body">
+</div>
+<div class="widget-setting-group">
+  <div class="widget-setting-category">
+  </div>
+  <div class="widget-setting-label">
+    <p>Distance</p>
+  </div>
+  <div class="widget-setting">
+    <div class="data-unit">
+        <p>36</p>
+      <h6>9:02am 7/10</h6>
+    </div>
+</div>
+</div>
+<div class="widget-setting-group">
+  <div class="widget-setting-category">
+  </div>
+  <div class="widget-setting-label">
+    <p>Wind Speed</p>
+  </div>
+  <div class="widget-setting">
+    <div class="data-unit">
+        <p>2</p>
+      <h6>1:33am 7/11</h6>
+    </div>
+</div>
+</div>
+</div>
+<div class="settings-block">
+<div class="widget-setting-group" id="diagnostic">
+<div class="widget-setting-category">
+  <p>Diagnostic Information</p>
+</div>
+<div class="widget-setting-label">
+  <p>CPU</p>
+</div>
+<div class="widget-setting">
+  <div class="data-unit">
+    <p>24%</p>
+    <h6>10:33am 7/11</h6>
+  </div>
+</div>
+</div>
+<div class="widget-setting-group">
+  <div class="widget-setting-category">
+  </div>
+  <div class="widget-setting-label">
+    <p>IP</p>
+  </div>
+  <div class="widget-setting">
+    <div class="data-unit">
+      <p>192.168.11.3</p>
+      <h6>1:33am 7/11</h6>
+    </div>
+</div>
+</div>
+<div class="widget-setting-group">
+  <div class="widget-setting-category">
+  </div>
+  <div class="widget-setting-label">
+    <p>Hostname</p>
+  </div>
+  <div class="widget-setting">
+    <div class="data-unit">
+      <p>raspberrypi</p>
+      <h6>1:33am 7/11</h6>
+    </div>
+</div>
+</div>
+
+</div>
+<div class="danger-box">
   <p>Permamently delete Sample Device</p>
   <button type="button" class="btn btn-danger">Delete</button>
-</div>
 </div>
 
 
