--- a/html/device-token-link.html
+++ b/html/device-token-link.html
@@ -83,7 +83,7 @@
 </div>
 <div class="widget-setting">
 <p id="below"> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
-<button class="btn btn-default btn-sm" id="token"> Get Another</button>
+<a> Get Another</a>
 </div>
 </div>
 </div>
