--- a/html/device.html
+++ b/html/device.html
@@ -32,13 +32,12 @@
     </div>
   </div>
   <div class="content">
-    <h1>Sample Device</h1>
     <div class="bar">
       <a href="devices.html">
       <button type="button" class="btn btn-primary">Back</button>
     </a>
       <div class="title">
-    <h1 class="no-show">Sample Device</h1>
+    <h1>Sample Device</h1>
   </div>
     <div class="control-buttons">
       <a href="new-widget.html">
@@ -71,8 +70,10 @@
   <p> Status</p>
 </div>
 <div class="widget-setting">
+  <div class="block-inline">
   <p>Connected</p>
-  <p id="gray">2 minutes ago 192.168.1.10</p>
+  <h6>2 minutes ago 192.168.1.10</h6>
+</div>
 </div>
 </div>
 <div class="widget-setting-group" >
@@ -82,8 +83,10 @@
 <p>Device Token</p>
 </div>
 <div class="widget-setting">
+<div class="block-inline">
 <p id="below"> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
 <button class="btn btn-default btn-sm" id="token"> Get Another</button>
+</div>
 </div>
 </div>
 </div>
@@ -98,7 +101,7 @@
           <p class="editable">Songs</p>
     </div>
     <div class="widget-setting">
-        <div class="data-unit">
+        <div class="block-inline">
             <p>20</p>
           <h6>5:30am 6/30</h6>
         </div>
@@ -111,7 +114,7 @@
         <p class="editable">Temp</p>
       </div>
       <div class="widget-setting">
-        <div class="data-unit">
+        <div class="block-inline">
             <p>22</p>
           <h6>10:13am 7/11</h6>
         </div>
@@ -124,7 +127,7 @@
         <p class="editable">Distance</p>
       </div>
       <div class="widget-setting">
-        <div class="data-unit">
+        <div class="block-inline">
             <p>36</p>
           <h6>9:02am 7/10</h6>
         </div>
@@ -137,7 +140,7 @@
         <p class="editable">Wind Speed</p>
       </div>
       <div class="widget-setting">
-        <div class="data-unit">
+        <div class="block-inline">
             <p>2</p>
           <h6>1:33am 7/11</h6>
         </div>
@@ -155,7 +158,7 @@
       <p>CPU</p>
     </div>
     <div class="widget-setting">
-      <div class="data-unit">
+      <div class="block-inline">
         <p>24%</p>
         <h6>10:33am 7/11</h6>
       </div>
@@ -168,7 +171,7 @@
         <p>IP</p>
       </div>
       <div class="widget-setting">
-        <div class="data-unit">
+        <div class="block-inline">
           <p>192.168.11.3</p>
           <h6>1:33am 7/11</h6>
         </div>
@@ -181,7 +184,7 @@
         <p>Hostname</p>
       </div>
       <div class="widget-setting">
-        <div class="data-unit">
+        <div class="block-inline">
           <p>raspberrypi</p>
           <h6>1:33am 7/11</h6>
         </div>
