--- a/html/device.html
+++ b/html/device.html
@@ -103,7 +103,7 @@
     <div class="widget-setting">
         <div class="block-inline">
             <p>20</p>
-          <h6>5:30am 6/30</h6>
+          <h6>3 minutes ago</h6>
         </div>
     </div>
     </div>
@@ -116,7 +116,7 @@
       <div class="widget-setting">
         <div class="block-inline">
             <p>22</p>
-          <h6>10:13am 7/11</h6>
+          <h6>2 hours ago</h6>
         </div>
     </div>
     </div>
@@ -129,7 +129,7 @@
       <div class="widget-setting">
         <div class="block-inline">
             <p>36</p>
-          <h6>9:02am 7/10</h6>
+          <h6>3 hours ago</h6>
         </div>
     </div>
     </div>
@@ -142,7 +142,7 @@
       <div class="widget-setting">
         <div class="block-inline">
             <p>2</p>
-          <h6>1:33am 7/11</h6>
+          <h6>May 14</h6>
         </div>
     </div>
     </div>
@@ -160,7 +160,7 @@
     <div class="widget-setting">
       <div class="block-inline">
         <p>24%</p>
-        <h6>10:33am 7/11</h6>
+        <h6>2 minutes ago</h6>
       </div>
     </div>
     </div>
@@ -173,7 +173,7 @@
       <div class="widget-setting">
         <div class="block-inline">
           <p>192.168.11.3</p>
-          <h6>1:33am 7/11</h6>
+          <h6>2 minutes ago</h6>
         </div>
     </div>
     </div>
@@ -186,7 +186,7 @@
       <div class="widget-setting">
         <div class="block-inline">
           <p>raspberrypi</p>
-          <h6>1:33am 7/11</h6>
+          <h6>3 hours ago</h6>
         </div>
     </div>
     </div>
