--- a/html/device.html
+++ b/html/device.html
@@ -34,7 +34,7 @@
   <div class="content">
     <div class="bar">
       <a href="devices.html">
-      <button type="button" class="btn btn-primary">Back</button>
+      <button type="button" class="btn btn-primary no-show">Back</button>
     </a>
       <div class="title">
     <h1>Sample Device</h1>
@@ -44,59 +44,25 @@
       <button type="button" class="btn btn-primary no-show">Add Widget</button>
     </a>
     <a href="edit-controlpanel.html"
-      <button type="button" class="btn btn-primary no-visible">Edit</button>
+      <button type="button" class="btn btn-primary no-show">Edit</button>
     </a>
     </div>
   </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      Settings
-    </div>
-    <div class="panel-body">
-      <div class="widget-setting-group">
-  <div class="widget-setting-category">
-  </div>
-  <div class="widget-setting-label">
-    <p>Name</p>
-  </div>
-  <div class="widget-setting">
-    <p>My First Device</p>
-  </div>
-</div>
-<div class="widget-setting-group">
-  <div class="widget-setting-category">
-  </div>
-  <div class="widget-setting-label">
-  <p> Status</p>
-</div>
-<div class="widget-setting">
-  <div class="block-inline">
-  <p>Connected</p>
-  <h6>2 minutes ago 192.168.1.10</h6>
-</div>
-</div>
-</div>
-<div class="widget-setting-group" >
-  <div class="widget-setting-category">
-  </div>
+  <p>Connected 2 minutes ago from 192.168.1.1</p>
+<div class="widget-setting-group" id="panel-like">
   <div class="widget-setting-label">
 <p>Device Token</p>
 </div>
-<div class="widget-setting">
-<div class="block-inline">
-<p id="below"> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
-<button class="btn btn-default btn-sm" id="token"> Get Another</button>
-</div>
-</div>
-</div>
+<div class="widget-setting" id="token">
+<p > d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
+<a > Get Another</a>
+<a id="docs"> How to set up</a>
 </div>
 </div>
 <div class="panel panel-default">
   <div class="panel-heading">Variables</div>
   <div class="panel-body">
     <div class="widget-setting-group" >
-      <div class="widget-setting-category">
-      </div>
     <div class="widget-setting-label">
           <p class="editable">Songs</p>
     </div>
@@ -108,8 +74,6 @@
     </div>
     </div>
     <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
       <div class="widget-setting-label">
         <p class="editable">Temp</p>
       </div>
@@ -121,8 +85,6 @@
     </div>
     </div>
     <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
       <div class="widget-setting-label">
         <p class="editable">Distance</p>
       </div>
@@ -134,8 +96,6 @@
     </div>
     </div>
     <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
       <div class="widget-setting-label">
         <p class="editable">Wind Speed</p>
       </div>
@@ -152,8 +112,6 @@
   <div class="panel-heading">Diagnostic Information</div>
   <div class="panel-body">
     <div class="widget-setting-group">
-    <div class="widget-setting-category">
-    </div>
     <div class="widget-setting-label">
       <p>CPU</p>
     </div>
@@ -165,8 +123,6 @@
     </div>
     </div>
     <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
       <div class="widget-setting-label">
         <p>IP</p>
       </div>
@@ -178,8 +134,6 @@
     </div>
     </div>
     <div class="widget-setting-group">
-      <div class="widget-setting-category">
-      </div>
       <div class="widget-setting-label">
         <p>Hostname</p>
       </div>
