--- a/html/user-page.html
+++ b/html/user-page.html
@@ -48,10 +48,8 @@
     </a>
     </div>
   </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">Settings</div>
-    <div class="panel-body">
-<div class="widget-setting-group" >
+  <p> Logged with Facebook</p>
+<div class="widget-setting-group" id="panel-like">
   <div class="widget-setting-label">
 <p>Api Key</p>
 </div>
@@ -61,16 +59,7 @@
 <a id="docs"> How to set up</a>
 </div>
 </div>
-<div class="widget-setting-group" >
-  <div class="widget-setting-label">
-<p>Provider</p>
-</div>
-<div class="widget-setting" id="token">
-<p> ?????</p>
-</div>
-</div>
-</div>
-</div>
+
 <div class="panel panel-default">
   <div class="panel-heading">Change Password</div>
   <div class="panel-body">
