--- a/html/connect-device.html
+++ b/html/connect-device.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Devices</title>
+    <title>Cloud4RPI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Loading Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Loading Flat UI -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet">
     <link href="../css/control-panels-styles.css" rel="stylesheet">
-
+      <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <body>
   <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
@@ -17,11 +17,11 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
         </button>
-        <a class="navbar-brand" href="landing.html">Cloud4RPI</a>
+        <a class="navbar-brand" href="#">Cloud4RPI</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li ><a href="controlpanels.html">Control Panels</a></li>
+          <li><a href="controlpanels.html">Control Panels</a></li>
           <li class="active"><a href="devices.html">Devices</a></li>
           <li><a href="#contact">Docs</a></li>
         </ul>
@@ -31,33 +31,55 @@
       </div><!--/.nav-collapse -->
     </div>
   </div>
-    <div class="content">
-      <div class="bar">
-        <a href="controlpanels.html">
-        <button type="button" class="btn btn-primary no-show">Back</button>
-      </a>
-        <div class="title">
-      <h1>Devices</h1>
+  <div class="content">
+    <div class="bar">
+      <a href="devices.html">
+      <button type="button" class="btn btn-primary no-show">Back</button>
+    </a>
+      <div class="title">
+    <h1>Sample Device</h1>
+  </div>
+    <div class="control-buttons">
+      <a href="new-widget.html">
+      <button type="button" class="btn btn-primary no-show">Add Widget</button>
+    </a>
+    <a href="edit-controlpanel.html"
+      <button type="button" class="btn btn-primary no-show">Edit</button>
+    </a>
     </div>
-      <div class="control-buttons">
-        <a href="new-device.html">
-        <button type="button" class="btn btn-primary">New Device</button>
-      </a>
-      <a href="edit-devices.html"
-        <button type="button" class="btn btn-primary no-show">Edit</button>
-      </a>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <p style="width: 100%"> You don't seem to have any devices yet. Click on "New Device" to connect your first device! </p>
-    </div>
-    </div>
-</body>
+  </div>
+  <p>Waiting for device to connect</p>
+<div class="widget-setting-group" id="panel-like">
+  <div class="widget-setting-label">
+<p>Device Token</p>
+</div>
+<div class="widget-setting" id="token">
+<p >4ZbnkJ6gYuYFjFd8SSGFx7xmK</p>
+<a > Get Another</a>
+<a id="docs"> How to set up</a>
+</div>
+</div>
+<div class="panel panel-default">
+  <p> Check out our Docs on how to connect your device.</p>
+  <p> Right now we support following devices: </p>
+  <a href="#" >Raspberry Pi (Python)</a>
+  <p> Follow the instructions with a token above and if everything goes well, you'll see the change in status on this page and information will start to flow. </p>
+</div>
+<div class="panel panel-danger">
+  <div class="panel-heading">
+    Delete device
+  </div>
+  <div class="panel-body">
+  <p>Permamently delete Sample Device</p>
+  <button type="button" class="btn btn-danger">Delete</button>
+</div>
+</div>
 
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+
+
+  </div>
+</body>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/js/flat-ui.js"></script>
-
-<script src="../js/control-panels.js"></script>
