--- a/html/controlpanel-empty.html
+++ b/html/controlpanel-empty.html
@@ -50,110 +50,14 @@
       <a href="new-widget.html">
       <button type="button" class="btn btn-primary no-show">Add Widget</button>
     </a>
-    <a href="edit-controlpanel.html"
+    <a href="edit-controlpanel-empty.html"
       <button type="button" class="btn btn-primary">Edit</button>
     </a>
     </div>
   </div>
-    <div class="panels">
-      <a href="#" class="longwidget">
-        <h5>Wind Speed</h5>
-        <div class="widget-footer">
-          <p> 4:25pm 6/20</p>
-        </div>
-      </a>
-      <a href="#" class="widget">
-        <h5>Gauge</h5>
-        <div class="widget-footer">
-          <p> 4:25pm 6/20</p>
-        </div>
-      </a>
-      <a href="#" class="widget">
-        <div class="widget-head">
-        <h5>String</h5>
-        <h4 id="string_value">run</h4>
-      </div>
-      <div class="widget-body">
-      <input class="form-control">
-
-    </div>
-    <div class="widget-footer">
-      <p> 4:25pm 6/20</p>
-    </div>
-      </a>
-      <a href="#" class="widget">
-        <div class="widget-head">
-        <h5>Slider</h5>
-        <h4 id="slider_value">45</h4>
-      </div>
-      <div class="widget-body">
-      <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-value="45"/>
-      <script type="text/javascript">
-      $('#ex1').slider({
-formatter: function(value) {
-  $('#ex1').on('slide',function () {
-    document.getElementById("slider_value").style.fontSize = "20pt";
-    document.getElementById("slider_value").style.color = "#e2e2e2"
-    document.getElementById("slider_value").textContent =    value;
-    setTimeout(function() {
-      document.getElementById("slider_value").style.fontSize = "20pt";
-      document.getElementById("slider_value").style.color = "#16a085"
-      document.getElementById("slider_value").textContent = value;
-  }, 2000);
-
-
-});
-
-  return 'Current value: ' + value;
-}
-});
-
-</script>
-    </div>
-    <div class="widget-footer">
-      <p> 4:25pm 6/20</p>
-    </div>
-      </a>
-      <a href="#" class="widget">
-        <h5>Number</h5>
-      </a>
-      <a href="#" class="widget">
-        <div class="widget-head">
-        <h5>Switch</h5>
-        <h4 id="switch_value">On</h4>
-      </div>
-      <div class="widget-body">
-      <input type="checkbox" id="checkbox-toggle" name="my-checkbox" checked>
-      <script type="text/javascript">
-        $("[name='my-checkbox']").bootstrapSwitch();
-        $("[name='my-checkbox']").click(function() {
-          if($("[name='my-checkbox']").is(":checked")){
-            $("#status").html("sending: Correct");
-            console.log("On");
-          } else {
-            $("#status").html("sending: Incorrect");
-          }
-        });
-
-      </script>
-    </div>
-    <div class="widget-footer">
-      <p>4:25pm 6/20</p>
-    </div>
-      </a>
-      <a href="#" class="widget">
-        <div class="widget-head">
-        <h5>Button</h5>
-        <h4>3h</h4>
-      </div>
-      <div class="widget-body">
-        <button class="btn btn-primary">PLAY SOUND</button>
-      </div>
-      <div class="widget-footer">
-        <p>4:25pm 6/20</p>
-      </div>
-      </a>
-    </div>
+  <div class="panel panel-default">
+    <p> Welcome to your new control panel! It's empty and doesn't have a nice name as yet. There's an Edit mode for all changes you want to do to your control panel. Click there to add some widgets and rename the panel for your liking. </p>
+  </div>
   </div>
 </body>
 
