--- a/html/connect-device.html
+++ b/html/connect-device.html
@@ -48,7 +48,7 @@
     </a>
     </div>
   </div>
-  <p>Waiting for device to connect</p>
+  <p style="text-align:center;">Waiting for device to connect</p>
 <div class="widget-setting-group" id="panel-like">
   <div class="widget-setting-label">
 <p>Device Token</p>
@@ -63,14 +63,14 @@
   <p> Check out our Docs on how to connect your device.</p>
   <p> Right now we support following devices: </p>
   <a href="#" >Raspberry Pi (Python)</a>
-  <p> Follow the instructions with a token above and if everything goes well, you'll see the change in status on this page and information will start to flow. </p>
+  <p> Follow the instructions with a device token above and if everything goes well, you'll see the change in status on this page. </p>
 </div>
-<div class="panel panel-danger">
+<div class="panel panel-danger" style="text-align:left;">
   <div class="panel-heading">
     Delete device
   </div>
-  <div class="panel-body">
-  <p>Permamently delete Sample Device</p>
+  <div class="panel-body" >
+  <p style="text-align:left;">Permamently delete Sample Device</p>
   <button type="button" class="btn btn-danger">Delete</button>
 </div>
 </div>
