--- a/html/controlpanel-empty.html
+++ b/html/controlpanel-empty.html
@@ -56,7 +56,7 @@
     </div>
   </div>
   <div class="panel panel-default">
-    <p> Welcome to your new control panel! It's empty and doesn't have a nice name as yet. There's an Edit mode for all changes you want to do to your control panel. Click there to add some widgets and rename the panel for your liking. </p>
+    <p style="text-align:left;"> Welcome to your new control panel! It's empty and doesn't have a nice name as yet. There's an Edit mode for all changes you want to do to your control panel. Click there to add some widgets and rename the panel for your liking. </p>
   </div>
   </div>
 </body>
