--- a/html/devices-empty.html
+++ b/html/devices-empty.html
@@ -40,7 +40,7 @@
       <h1>Devices</h1>
     </div>
       <div class="control-buttons">
-        <a href="new-device.html">
+        <a href="connect-device.html">
         <button type="button" class="btn btn-primary">New Device</button>
       </a>
       <a href="edit-devices.html"
@@ -48,7 +48,7 @@
       </a>
       </div>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-default" style="margin-left: 5%; margin-right:5%;">
       <p style="width: 100%"> You don't seem to have any devices yet. Click on "New Device" to connect your first device! </p>
     </div>
     </div>
