--- a/html/edit-controlpanel-empty.html
+++ b/html/edit-controlpanel-empty.html
@@ -50,10 +50,10 @@
     </div>
   </div>
   <div class="panel panel-default">
-    <p> Try adding new widget! You can also rename and delete your control panel in this mode.</p>
+    <p style="text-align:left;"> Try adding new widget! You can also rename and delete your control panel in this mode.</p>
   </div>
-    <div class="danger-box">
-      <p>Permamently delete this control panel</p>
+    <div class="danger-box" style="text-align:left; padding: 10px;">
+      <p style="margin-left:5px; margin-bottom:10px;">Permamently delete this control panel</p>
       <button type="button" class="btn btn-danger">Delete</button>
     </div>
   </div>
