--- a/html/edit-controlpanel-first-widget.html
+++ b/html/edit-controlpanel-first-widget.html
@@ -50,7 +50,7 @@
     </div>
   </div>
     <div class="panel panel-default">
-      <p> Neat! You can change widget's settings, move it about or delete it, if it's not right. </p>
+      <p style="text-align:left;"> Neat! You can change widget's settings, move it about or delete it, if it's not right. </p>
     </div>
     <div class="panels">
       <a href="widget-gauge-settings.html" class="widget">
