--- a/html/devices-empty.html
+++ b/html/devices-empty.html
@@ -49,7 +49,8 @@
       </div>
     </div>
     <div class="panel panel-default" style="margin-left: 5%; margin-right:5%;">
-      <p style="width: 100%"> You don't seem to have any devices yet. Click on "New Device" to connect your first device! </p>
+      <p style="width: 100%"> You don't seem to have any devices connected yet. It's neccesary to connect one so you could have an actual data to work with.</p>
+      <p>Click on "New Device" to connect your first device! </p>
     </div>
     </div>
 </body>
