--- a/html/edit-controlpanel-delete.html
+++ b/html/edit-controlpanel-delete.html
@@ -45,15 +45,21 @@
       <button type="button" class="btn btn-primary">Add Widget</button>
     </a>
     <a href="edit-controlpanel-delete.html">
-    <button type="button" class="btn btn-danger">Delete Control Panel</button>
+    <button type="button" class="btn btn-disable">Delete Control Panel</button>
   </a>
     <a href="controlpanel.html">
       <button type="button" class="btn btn-success">Done Editing</button>
     </a>
     </div>
   </div>
-  <div class="panel panel-default">
-    <p style="text-align:left;"> Try adding new widget! You can also rename and delete your control panel in this mode.</p>
+  <div class="danger-box" style="text-align:left; padding: 10px;">
+    <p style="margin-left:5px; margin-bottom:10px;">Are you sure you want to permamently delete this control panel?</p>
+    <a href="controlpanels-deleted.html">
+    <button type="button" class="btn btn-danger">Delete</button>
+  </a>
+    <a href="edit-controlpanel-empty.html">
+    <button type="button" class="btn btn-default">Cancel</button>
+  </a>
   </div>
   </div>
 </body>
