--- a/html/edit-controlpanel-delete.html
+++ b/html/edit-controlpanel-delete.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="danger-box" style="text-align:left; padding: 10px;">
-    <p style="margin-left:5px; margin-bottom:10px;">Are you sure you want to permamently delete this control panel?</p>
+    <p style="margin-left:5px; margin-bottom:10px;">Permamently delete this control panel?</p>
     <a href="controlpanels-deleted.html">
     <button type="button" class="btn btn-danger">Delete</button>
   </a>
